--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(lab2_2sem)
 
 set(CMAKE_CXX_STANDARD 20)
 
-#add_executable(lab2_2sem main.cpp DynamicArray.h ArraySequence.h LinkedListSequence.h Sequence.h Exception.h LinkedList.h)
+add_executable(lab2_2sem main.cpp DynamicArray.h ArraySequence.h LinkedListSequence.h Sequence.h Exception.h LinkedList.h)
 
-add_executable(lab2_2sem tests.cpp ArraySequenceTest.h DynamicArrayTest.h LinkedListTest.h LinkedListSequenceTest.h ArraySequenceTest.cpp DynamicArrayTest.cpp LinkedListTest.cpp Exception.h LinkedListSequenceTest.cpp)
+#add_executable(lab2_2sem tests.cpp ArraySequenceTest.h DynamicArrayTest.h LinkedListTest.h LinkedListSequenceTest.h ArraySequenceTest.cpp DynamicArrayTest.cpp LinkedListTest.cpp Exception.h LinkedListSequenceTest.cpp)
